--- a/ReflectyGlass/res/layout/activity_main.xml
+++ b/ReflectyGlass/res/layout/activity_main.xml
@@ -8,18 +8,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="TextView" />
+    
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"/>
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true" android:keepScreenOn="true"
-        android:layout_alignParentTop="true"
-        android:text="TextView"  android:visibility="gone"/>
 
 </RelativeLayout>
